[gd_scene load_steps=7 format=3 uid="uid://cixam5x57fa5u"]

[ext_resource type="Script" uid="uid://bj7guedgcfnv2" path="res://scripts/hanging_pig.gd" id="1_2rule"]
[ext_resource type="PackedScene" uid="uid://jepjmshtysp7" path="res://models/props/carcass.tscn" id="2_ujrae"]
[ext_resource type="PackedScene" uid="uid://b4bqdap6clkl1" path="res://models/props/hook.tscn" id="3_x6r35"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hvsbd"]
radius = 0.224973
height = 1.58286

[sub_resource type="BoxShape3D" id="BoxShape3D_6ip0e"]
size = Vector3(0.1, 0.2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1sof2"]
size = Vector3(0.1, 0.1, 0.1)

[node name="HookedPig" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
input_ray_pickable = false
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 200.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -1, 0)
continuous_cd = true
contact_monitor = true
max_contacts_reported = 5
linear_damp = 2.0
script = ExtResource("1_2rule")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.95013e-08, -1.13246)
radius = 0.4
avoidance_layers = 3

[node name="Carcass" parent="." instance=ExtResource("2_ujrae")]
transform = Transform3D(-0.405689, 3.54664e-08, 0.108704, -0.108704, 2.7862e-08, -0.405689, -4.14692e-08, -0.42, -1.77333e-08, 0, 7.13938e-09, -0.16333)

[node name="hook" parent="." instance=ExtResource("3_x6r35")]
transform = Transform3D(-1.31134e-08, 0, 0.3, 0.3, -1.31134e-08, 1.31134e-08, 1.31134e-08, 0.3, 0, 0, 1.2085e-08, -0.276473)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0379499, 9.60977e-07, -0.973623)
shape = SubResource("CapsuleShape3D_hvsbd")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.0185476, -0.0250445, 0.0816797)
shape = SubResource("BoxShape3D_6ip0e")

[node name="JunctionCollisionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0218223, -6.65118e-09, 0.152161)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="JunctionCollisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00578904, -0.00126958, 0)
shape = SubResource("BoxShape3D_1sof2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="area_entered" from="JunctionCollisionArea" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="JunctionCollisionArea" to="." method="_on_area_3d_area_exited"]
